--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/3.1.8/imagesloaded.pkgd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.2/react-with-addons.js"></script>
 
-  <script src="/js/minpubsub.js"></script>
+  <script src="js/minpubsub.js"></script>
   <script src="js/PictureViewer.js"></script>
 
   <script type="text/javascript" src="js/map.js"></script>
